--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ et-xmlfile==1.0.1
 gunicorn==19.9.0
 jdcal==1.3
 Markdown==2.6.11
-psycopg2==2.7.5
+psycopg2-binary
 pytz==2018.4
 static3==0.7.0
 web.py==0.40.dev1
