--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ djangorestframework==3.8.2
 et-xmlfile==1.0.1
 jdcal==1.3
 Markdown==2.6.11
-psycopg2-binary
 pytz==2018.4
 static3==0.7.0
 web.py==0.40.dev1
@@ -19,3 +18,6 @@ web.py==0.40.dev1
 django-heroku
 gunicorn
 whitenoise
+
+# Postgress
+psycopg2-binary
