--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ dj-static==0.0.6
 Django==2.0.4
 
 # Cross request requests
-django-cors-headers==2.4.0
+django-cors-headers
+
+
 django-filter==1.1.0
 django-toolbelt==0.0.1
 djangorestframework==3.8.2
